Работа с мероприятиями добавлена