@@ -1,40 +1,55 @@
 package com.innovativesoftware.domsommelier_backend.event_management.event.service;
 
-import com.innovativesoftware.domsommelier_backend.event_management.event.model.EventWithFileListDTO;
-import com.innovativesoftware.domsommelier_backend.event_management.event.model.EventWithFileProjection;
+import com.innovativesoftware.domsommelier_backend.event_management.event.entity.Event;
+import com.innovativesoftware.domsommelier_backend.event_management.event.model.EventDTO;
 import com.innovativesoftware.domsommelier_backend.event_management.event.repository.EventRepository;
-import com.innovativesoftware.domsommelier_backend.file_management.model.FileDTO;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.innovativesoftware.domsommelier_backend.event_management.event.utils.EventMapper;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
-@RequiredArgsConstructor
 @Service
 public class EventService {
-    @Autowired
-    private EventRepository eventRepository;
 
-    public List<EventWithFileListDTO> findAllEvents() {
-        List<EventWithFileProjection> eventsWithFile = eventRepository.findAllEvents();
-        return eventsWithFile.stream().map(eventWithFile ->
-                new EventWithFileListDTO()
-                        .setId(eventWithFile.getId())
-                        .setDescription(eventWithFile.getDescription())
-                        .setStartedAt(eventWithFile.getStartedAt())
-                        .setFinishedAt(eventWithFile.getFinishedAt())
-                        .setFiles(
-                                new ArrayList<>(List.of(
-                                        FileDTO.builder()
-                                                .id(eventWithFile.getEventFileId())
-                                                .bucket(eventWithFile.getBucket())
-                                                .name(eventWithFile.getFileName())
-                                                .description(eventWithFile.getEventFileDescription())
-                                                .build()
-                                )))
-                )
-                .toList();
+    private final EventRepository eventRepository;
+
+    public EventService(EventRepository eventRepository) {
+        this.eventRepository = eventRepository;
+    }
+
+    public List<EventDTO> getAllEvents() {
+        return eventRepository.findAll()
+                .stream()
+                .map(EventMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    public EventDTO getEventById(UUID id) {
+        Event event = eventRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Event not found"));
+        return EventMapper.toDto(event);
+    }
+
+    public EventDTO createEvent(EventDTO eventDTO) {
+        Event event = EventMapper.toEntity(eventDTO);
+        event.setId(UUID.randomUUID());
+        Event saved = eventRepository.save(event);
+        return EventMapper.toDto(saved);
+    }
+
+    public EventDTO updateEvent(UUID id, EventDTO eventDTO) {
+        Event event = eventRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Event not found"));
+        EventMapper.updateEventFromDto(eventDTO, event);
+        Event updated = eventRepository.save(event);
+        return EventMapper.toDto(updated);
+    }
+
+    public void deleteEvent(UUID id) {
+        eventRepository.deleteById(id);
     }
 }
+
